[project]
name = "tuathantsinn-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.3.1",
    "duckdb-engine>=0.17.0",
    "finlab>=1.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=5.17.0",
    "pydantic>=2.11.7",
    "streamlit>=1.46.0",
    "ta-lib>=0.6.4",
    "watchdog>=6.0.0",
]
